--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.makeramen:roundedimageview:2.0.1'
+    compile 'com.joanzapata.android:android-iconify:1.0.9'
 }
