Added to speech and images.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.guerritastudio.albertogarcia.droidev3" >
+    package="com.guerritastudio.albertogarcia.droidev3">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="ANDROID.PERMISSION.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name="com.guerritastudio.albertogarcia.droidev3.app.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.guerritastudio.albertogarcia.droidev3.ui.activity.ConnectActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,10 +22,7 @@
         </activity>
         <activity
             android:name="com.guerritastudio.albertogarcia.droidev3.ui.activity.DrawerActivity"
-            android:label="@string/title_activity_drawer" >
-        </activity>
-
-        <!--Para probar joystick-->
+            android:label="@string/title_activity_drawer"/>
     </application>
 
 </manifest>
